--- a/modules/openapi-generator/src/main/resources/go-server/routers.mustache
+++ b/modules/openapi-generator/src/main/resources/go-server/routers.mustache
@@ -90,5 +90,6 @@ func ReadFormFileToTempFile(r *http.Request, key string) (*os.File, error) {
 
 // parseIntParameter parses a sting parameter to an int64
 func parseIntParameter(param string) (int64, error) {
+    // test
 	return strconv.ParseInt(param, 10, 64)
 }
